--- a/options/test/MPRNet/MPRNet_test_Derain.yml
+++ b/options/test/MPRNet/MPRNet_test_Derain.yml
@@ -48,17 +48,17 @@ path:
 val:
   save_img: true
   grids: false
-  use_image: false
+  use_image: true
 
   metrics:
     psnr: # metric name, can be arbitrary
       type: calculate_psnr
       crop_border: 0
-      test_y_channel: false
+      test_y_channel: true
     ssim:
       type: calculate_ssim
       crop_border: 0
-      test_y_channel: false
+      test_y_channel: true
 
 # dist training settings
 dist_params:
