--- a/options/train/MPRNet/MPRNet_train_Rain13k.yml
+++ b/options/train/MPRNet/MPRNet_train_Rain13k.yml
@@ -111,6 +111,7 @@ val:
   val_freq: !!float 2e4
   save_img: false
   grids: false
+  use_image: true
 
   metrics:
     psnr: # metric name, can be arbitrary
