--- a/options/test/HINet/HINet_test_Derain.yml
+++ b/options/test/HINet/HINet_test_Derain.yml
@@ -5,7 +5,7 @@
 # Copyright 2018-2020 BasicSR Authors
 # ------------------------------------------------------------------------
 # general settings
-name: HINet-Derain-test
+name: 023_HINet_Derain_test_all
 model_type: ImageRestorationModel
 scale: 1
 num_gpu: 1 # set num_gpu: 0 for cpu mode
@@ -14,16 +14,29 @@ manual_seed: 10
 # dataset and data loader settings
 datasets:
 
-  val:
-    name: Test1200
+  test1:
+    name: Test100
     type: PairedImageDataset
-
-    dataroot_gt: /data/yhliu/DATA/Derain/test/Test1200/target
-    dataroot_lq: /data/yhliu/DATA/Derain/test/Test1200/input
-
+    dataroot_gt: /data/yhliu/DATA/Derain/test//Test100/target
+    dataroot_lq: /data/yhliu/DATA/Derain/test/Test100/input
     io_backend:
       type: disk
 
+  test2:
+    name: Rain100L
+    type: PairedImageDataset
+    dataroot_gt: /data/yhliu/DATA/Derain/test/Rain100L/target
+    dataroot_lq: /data/yhliu/DATA/Derain/test/Rain100L/input
+    io_backend:
+      type: disk
+
+  test3:
+    name: Rain100H
+    type: PairedImageDataset
+    dataroot_gt: /data/yhliu/DATA/Derain/test/Rain100H/target
+    dataroot_lq: /data/yhliu/DATA/Derain/test/Rain100H/input
+    io_backend:
+      type: disk
 # network structures
 network_g:
   type: HINet
@@ -33,13 +46,14 @@ network_g:
 
 # path
 path:
-  pretrain_network_g: experiments/pretrained_models/HINet/HINet-Rain13k.pth
+  pretrain_network_g: experiments/023_HINet_Benchmark_Rain13K_Cosine_GT256B8_600k/models/net_g_5000.pth
   strict_load_g: true
   resume_state: ~
+  param_key: params
 
 # validation settings
 val:
-  save_img: true
+  save_img: false
   grids: false
   use_image: true
 
