--- a/options/train/Uformer/RealDenoising_Uformer.yml
+++ b/options/train/Uformer/RealDenoising_Uformer.yml
@@ -1,5 +1,5 @@
 # general settings
-name: 028_Restormer_Benchmark_Gaussian_Denoising_Cosine_GT256B8_600k
+name: 025_Restormer_Benchmark_Real_Denoise_Cosine_GT256B8_600k
 model_type: ImageRestorationModel
 scale: 1
 num_gpu: 4  # set num_gpu: 0 for cpu mode
@@ -9,33 +9,30 @@ manual_seed: 100
 datasets:
   train:
     name: TrainSet
-    type: GaussianNoiseImageDataset
-    sigma_type: constant
-    sigma_range: 50
-    in_ch: 3    ## RGB image
-    dataroot_gt:  datasets/Denoising/train/DFWB.lmdb
-    dataroot_lq: none
+    type: PairedImageDataset
+    dataroot_gt: datasets/Denoising/train/SIDD/gt_crops.lmdb
+    dataroot_lq: datasets/Denoising/train/SIDD/input_crops.lmdb
 
     filename_tmpl: '{}'
     io_backend:
       type: lmdb
 
-    # data loader
     use_flip: true
     use_rot: true
+
+    # data loader
     use_shuffle: true
     num_worker_per_gpu: 8
     batch_size_per_gpu: 2
 
     ### -------------Progressive training--------------------------
     # mini_batch_sizes: [8,5,4,2,1,1]             # Batch size per gpu   
-    # iters: [92000,64000,48000,36000,36000,324000]
+    # iters: [92000,64000,48000,36000,36000,24000]
     # gt_size: 384   # Max patch size for progressive training
     # gt_sizes: [128,160,192,256,320,384]  # Patch sizes for progressive training.
     ### ------------------------------------------------------------
 
-    ### ------- Training on single fixed-patch size 128x128---------
-    # mini_batch_sizes: [8]   
+    ### ------- Training on single fixed-patch size 256x256---------  
     iters: [600000]
     gt_size: 256
     gt_sizes: [256]
@@ -45,13 +42,12 @@ datasets:
     prefetch_mode: ~
 
   val:
-    name: ValSet
-    type: GaussianNoiseImageDataset
-    sigma_test: 50
-    in_ch: 3  ## RGB image
-    dataroot_gt: datasets/Denoising/test/CBSD68
-    dataroot_lq: none
+    name: SIDD
+    type: PairedImageDataset
+    dataroot_gt: ./datasets/Denoising/val/SIDD/groundtruth
+    dataroot_lq: ./datasets/Denoising/val/SIDD/input
     io_backend:
+      # type: lmdb
       type: disk
 
 # network structures
@@ -74,6 +70,7 @@ path:
   pretrain_network_g: ~
   strict_load_g: true
   resume_state: ~
+
 # training settings
 train:
   total_iter: 600000
@@ -109,18 +106,17 @@ val:
   rgb2bgr: true
   use_image: true
   max_minibatch: 8
-  padding_factor: 8
-  is_square: false
+
   metrics:
     psnr: # metric name, can be arbitrary
       type: calculate_psnr
       crop_border: 0
-      test_y_channel: False
+      test_y_channel: false
 
 # logging settings
 logger:
   print_freq: 250
-  save_checkpoint_freq: !!float 5e3
+  save_checkpoint_freq: !!float 1e4
   use_tb_logger: true
   wandb:
     project: ~
