--- a/options/test/Restormer/test_Restormer_real_denoise.yml
+++ b/options/test/Restormer/test_Restormer_real_denoise.yml
@@ -5,7 +5,7 @@
 # Copyright 2018-2020 BasicSR Authors
 # ------------------------------------------------------------------------
 # general settings
-name: Restormer_motion_deblur
+name: official_Restormer_real_denoise
 model_type: ImageRestorationModel
 scale: 1
 num_gpu: 2 # set num_gpu: 0 for cpu mode
@@ -14,26 +14,10 @@ manual_seed: 10
 # dataset and data loader settings
 datasets:
   test1:
-    name: gopro-test
+    name: SIDD
     type: PairedImageDataset
-    dataroot_gt: ./datasets/Motion_Deblurring/test/GoPro/target
-    dataroot_lq: ./datasets/Motion_Deblurring/test/GoPro/input
-    io_backend:
-      # type: lmdb
-      type: disk
-  # test2:
-  #   name: HIDE
-  #   type: PairedImageDataset
-  #   dataroot_gt: ./datasets/Motion_Deblurring/test/HIDE/target
-  #   dataroot_lq: ./datasets/Motion_Deblurring/test/HIDE/input
-  #   io_backend:
-  #     # type: lmdb
-  #     type: disk
-  test3:
-    name: RealBlur_R
-    type: PairedImageDataset
-    dataroot_gt: ./datasets/Motion_Deblurring/test/RealBlur_R/target
-    dataroot_lq: ./datasets/Motion_Deblurring/test/RealBlur_R/input
+    dataroot_gt: ./datasets/Denoising/val/SIDD/target_crops
+    dataroot_lq: ./datasets/Denoising/val/SIDD/input_crops
     io_backend:
       # type: lmdb
       type: disk
@@ -48,13 +32,13 @@ network_g:
   heads: [1,2,4,8]
   ffn_expansion_factor: 2.66
   bias: False
-  LayerNorm_type: WithBias
+  LayerNorm_type: BiasFree
   dual_pixel_task: False
 
 # path
 path:
-  pretrain_network_g:  experiments/020_Restormer_Benchmark_motion_deblur_Cosine_GT256B8_600k/models/net_g_latest.pth
-  strict_load_g: true
+  pretrain_network_g:  experiments/pretrained_models/Restormer/real_denoising.pth
+  strict_load_g: False
   resume_state: ~
 
 # validation settings
@@ -63,7 +47,6 @@ val:
   grids: false
   padding_factor: 8
   is_square: false
-
   metrics:
     psnr: # metric name, can be arbitrary
       type: calculate_psnr
