--- a/options/test/SwinIR/test_SwinIR_gaussian_denoise_50.yml
+++ b/options/test/SwinIR/test_SwinIR_gaussian_denoise_50.yml
@@ -5,7 +5,7 @@
 # Copyright 2018-2020 BasicSR Authors
 # ------------------------------------------------------------------------
 # general settings
-name: GaussianColorDenoising_RestormerSigma50
+name: SwinIRGaussianColorDenoisingSigma50
 model_type: ImageRestorationModel
 scale: 1
 num_gpu: 2 # set num_gpu: 0 for cpu mode
@@ -13,19 +13,19 @@ manual_seed: 10
 
 # dataset and data loader settings
 datasets:
-  # test_1:
-  #   name: BSD68
-  #   type: GaussianNoiseImageDataset
-  #   dataroot_gt: ./datasets/Denoising/test/BSD68
-  #   dataroot_lq: none
-  #   sigma_test: 50
-  #   in_ch: 3  ## RGB image
-  #   io_backend:
-  #     # type: lmdb
-  #     type: disk
+  test_1:
+    name: BSD68
+    type: Dataset_GaussianDenoising
+    dataroot_gt: ./datasets/Denoising/test/BSD68
+    dataroot_lq: none
+    sigma_test: 50
+    in_ch: 3  ## RGB image
+    io_backend:
+      # type: lmdb
+      type: disk
   test_2:
     name: CBSD68
-    type: GaussianNoiseImageDataset
+    type: Dataset_GaussianDenoising
     dataroot_gt: ./datasets/Denoising/test/CBSD68
     dataroot_lq: none
     sigma_test: 50
@@ -43,27 +43,7 @@ datasets:
     io_backend:
       # type: lmdb
       type: disk
-  test_4:
-    name: McMaster
-    type: GaussianNoiseImageDataset
-    dataroot_gt: ./datasets/Denoising/test/McMaster
-    dataroot_lq: none
-    sigma_test: 50
-    in_ch: 3  ## RGB image
-    io_backend:
-      # type: lmdb
-      type: disk
-  # test_5:
-  #   name: Urban100
-  #   type: GaussianNoiseImageDataset
-  #   dataroot_gt: ./datasets/Denoising/test/Urban100
-  #   dataroot_lq: none
-  #   sigma_test: 50
-  #   in_ch: 3  ## RGB image
-  #   io_backend:
-  #     # type: lmdb
-  #     type: disk
-  # test_5:
+  # test_6:
   #   name: cropped_Kodak24
   #   type: Dataset_GaussianDenoising
   #   dataroot_gt: ./datasets/Denoising/test/Cropped_kodak
@@ -73,24 +53,46 @@ datasets:
   #   io_backend:
   #     # type: lmdb
   #     type: disk
+  test_4:
+    name: McMaster
+    type: Dataset_GaussianDenoising
+    dataroot_gt: ./datasets/Denoising/test/McMaster
+    dataroot_lq: none
+    sigma_test: 50
+    in_ch: 3  ## RGB image
+    io_backend:
+      # type: lmdb
+      type: disk
+  test_5:
+    name: Urban100
+    type: Dataset_GaussianDenoising
+    dataroot_gt: ./datasets/Denoising/test/Urban100
+    dataroot_lq: none
+    sigma_test: 50
+    in_ch: 3  ## RGB image
+    io_backend:
+      # type: lmdb
+      type: disk
+
 # network structures
 network_g:
-  type: Restormer
-  inp_channels: 3
-  out_channels: 3
-  dim: 48
-  num_blocks: [4,6,6,8]
-  num_refinement_blocks: 4
-  heads: [1,2,4,8]
-  ffn_expansion_factor: 2.66
-  bias: False
-  LayerNorm_type: BiasFree
-  dual_pixel_task: False
+  type: SwinIR
+  upscale: 1
+  in_chans: 3
+  img_size: 128
+  window_size: 8
+  img_range: 1.
+  depths: [6, 6, 6, 6, 6, 6]
+  embed_dim: 180
+  num_heads: [6, 6, 6, 6, 6, 6]
+  mlp_ratio: 2
+  upsampler: ''
+  resi_connection: '1conv'
 
 # path
 path:
-  pretrain_network_g: /mnt/petrelfs/puyuandong/Low_level_vision/BasicIR/experiments/pretrained_models/Restormer/gaussian_color_denoising_sigma50.pth
-  strict_load_g: true
+  pretrain_network_g: /mnt/petrelfs/puyuandong/Low_level_vision/BasicIR/experiments/pretrained_models/SwinIR/005_colorDN_DFWB_s128w8_SwinIR-M_noise50.pth
+  strict_load_g: false
   resume_state: ~
 
 # validation settings
