--- a/options/test/Uformer/test_Uformer_derain.yml
+++ b/options/test/Uformer/test_Uformer_derain.yml
@@ -5,7 +5,7 @@
 # Copyright 2018-2020 BasicSR Authors
 # ------------------------------------------------------------------------
 # general settings
-name: official_Restormer_derain
+name: Uformer_derain
 model_type: ImageRestorationModel
 scale: 1
 num_gpu: 2 # set num_gpu: 0 for cpu mode
@@ -55,39 +55,45 @@ datasets:
       type: disk
 # network structures
 network_g:
-  type: Restormer
-  inp_channels: 3
-  out_channels: 3
-  dim: 48
-  num_blocks: [4,6,6,8]
-  num_refinement_blocks: 4
-  heads: [1,2,4,8]
-  ffn_expansion_factor: 2.66
-  bias: False
-  LayerNorm_type: WithBias
-  dual_pixel_task: False
-
+  type: Uformer
+  img_size: 256
+  in_chans: 3
+  dd_in: 3
+  embed_dim: 32
+  depths: [1, 2, 8, 8, 2, 8, 8, 2, 1]
+  num_heads: [1, 2, 4, 8, 16, 16, 8, 4, 2]
+  win_size: 8
+  mlp_ratio: 4.
+  qkv_bias: True
+  qk_scale: ~
+  drop_rate: 0.
+  attn_drop_rate: 0.
+  drop_path_rate: 0.1
+  token_projection: linear
+  token_mlp: leff
+  modulator: True
 # path
 path:
-  pretrain_network_g:  experiments/pretrained_models/Restormer/deraining.pth
+  pretrain_network_g:  /mnt/petrelfs/puyuandong/Low_level_vision/BasicIR/experiments/029_Uformer_Benchmark_Derain_Cosine_GT256B8_600k/models/net_g_latest.pth
   strict_load_g: true
   resume_state: ~
+  # param_key: state_dict
 
 # validation settings
 val:
   save_img: false
   grids: false
-  padding_factor: 8
-  is_square: false
+  padding_factor: 128
+  is_square: true
   metrics:
     psnr: # metric name, can be arbitrary
       type: calculate_psnr
       crop_border: 0
-      test_y_channel: true
+      test_y_channel: false
     ssim:
       type: calculate_ssim
       crop_border: 0
-      test_y_channel: true
+      test_y_channel: false
 
 # dist training settings
 dist_params:
