--- a/options/test/Uformer/test_Uformer_motion_deblur.yml
+++ b/options/test/Uformer/test_Uformer_motion_deblur.yml
@@ -5,7 +5,7 @@
 # Copyright 2018-2020 BasicSR Authors
 # ------------------------------------------------------------------------
 # general settings
-name: Restormer_motion_deblur
+name: Uformer_motion_deblur
 model_type: ImageRestorationModel
 scale: 1
 num_gpu: 2 # set num_gpu: 0 for cpu mode
@@ -13,7 +13,7 @@ manual_seed: 10
 
 # dataset and data loader settings
 datasets:
-  test1:
+  test:
     name: gopro-test
     type: PairedImageDataset
     dataroot_gt: ./datasets/Motion_Deblurring/test/GoPro/target
@@ -21,49 +21,35 @@ datasets:
     io_backend:
       # type: lmdb
       type: disk
-  # test2:
-  #   name: HIDE
-  #   type: PairedImageDataset
-  #   dataroot_gt: ./datasets/Motion_Deblurring/test/HIDE/target
-  #   dataroot_lq: ./datasets/Motion_Deblurring/test/HIDE/input
-  #   io_backend:
-  #     # type: lmdb
-  #     type: disk
-  test3:
-    name: RealBlur_R
-    type: PairedImageDataset
-    dataroot_gt: ./datasets/Motion_Deblurring/test/RealBlur_R/target
-    dataroot_lq: ./datasets/Motion_Deblurring/test/RealBlur_R/input
-    io_backend:
-      # type: lmdb
-      type: disk
 # network structures
 network_g:
-  type: Restormer
-  inp_channels: 3
-  out_channels: 3
-  dim: 48
-  num_blocks: [4,6,6,8]
-  num_refinement_blocks: 4
-  heads: [1,2,4,8]
-  ffn_expansion_factor: 2.66
-  bias: False
-  LayerNorm_type: WithBias
-  dual_pixel_task: False
-
+  type: Uformer
+  img_size: 256
+  in_chans: 3
+  dd_in: 3
+  embed_dim: 32
+  depths: [1,2,8,8,2,8,8,2,1]
+  num_heads: [1, 2, 4, 8, 16, 16, 8, 4, 2]
+  win_size: 8
+  mlp_ratio: 4.
+  qkv_bias: True
+  qk_scale: ~
+  drop_rate: 0.
+  attn_drop_rate: 0.
+  drop_path_rate: 0.1
 # path
 path:
-  pretrain_network_g:  experiments/020_Restormer_Benchmark_motion_deblur_Cosine_GT256B8_600k/models/net_g_latest.pth
-  strict_load_g: true
+  pretrain_network_g: /mnt/petrelfs/puyuandong/Low_level_vision/BasicIR/experiments/030_Uformer_Benchmark_Motion_Deblur_Cosine_GT256B8_600k/models/net_g_latest.pth
+  strict_load_g: false
+  # param_key: ~
   resume_state: ~
 
 # validation settings
 val:
-  save_img: false
+  save_img: true
   grids: false
-  padding_factor: 8
-  is_square: false
-
+  padding_factor: 128
+  is_square: true
   metrics:
     psnr: # metric name, can be arbitrary
       type: calculate_psnr
