--- a/options/train/Restormer/Deraining_Restormer.yml
+++ b/options/train/Restormer/Deraining_Restormer.yml
@@ -1,5 +1,5 @@
 # general settings
-name: 016_Restormer_Reproduce_Derain_Cosine_B8_600k
+name: 016_Restormer_Benchmark_Derain_Cosine_GT256B8_600k
 model_type: ImageRestorationModel
 scale: 1
 num_gpu: 4  # set num_gpu: 0 for cpu mode
@@ -33,8 +33,7 @@ datasets:
     # gt_sizes: [128,160,192,256,320,384]  # Patch sizes for progressive training.
     ### ------------------------------------------------------------
 
-    ### ------- Training on single fixed-patch size 256x256---------
-    mini_batch_sizes: [1]   
+    ### ------- Training on single fixed-patch size 256x256---------  
     iters: [600000]
     gt_size: 256
     gt_sizes: [256]
@@ -86,11 +85,6 @@ train:
     periods: [600000]       
     restart_weights: [1]
     eta_min: 0.00000001
-  
-  mixing_augs:
-    mixup: false
-    mixup_beta: 1.2
-    use_identity: true
 
   optim_g:
     type: AdamW
@@ -112,7 +106,8 @@ val:
   rgb2bgr: true
   use_image: true
   max_minibatch: 8
-
+  padding_factor: 8
+  is_square: false
   metrics:
     psnr: # metric name, can be arbitrary
       type: calculate_psnr
