--- a/options/train/SwinIR/train_SwinIR_gaussian_denoise_50.yml
+++ b/options/train/SwinIR/train_SwinIR_gaussian_denoise_50.yml
@@ -1,5 +1,5 @@
 # general settings
-name: 028_Restormer_Benchmark_Gaussian_Denoising_Cosine_GT256B8_600k
+name: 032_SwinIR_Benchmark_Gaussian_Denoising_Cosine_GT256B8_600k
 model_type: ImageRestorationModel
 scale: 1
 num_gpu: 4  # set num_gpu: 0 for cpu mode
@@ -26,21 +26,9 @@ datasets:
     use_shuffle: true
     num_worker_per_gpu: 8
     batch_size_per_gpu: 2
-
-    ### -------------Progressive training--------------------------
-    # mini_batch_sizes: [8,5,4,2,1,1]             # Batch size per gpu   
-    # iters: [92000,64000,48000,36000,36000,324000]
-    # gt_size: 384   # Max patch size for progressive training
-    # gt_sizes: [128,160,192,256,320,384]  # Patch sizes for progressive training.
-    ### ------------------------------------------------------------
-
-    ### ------- Training on single fixed-patch size 128x128---------
-    # mini_batch_sizes: [8]   
     iters: [600000]
-    gt_size: 256
-    gt_sizes: [256]
-    ### ------------------------------------------------------------
-
+    gt_size: 128
+    gt_sizes: [128]
     dataset_enlarge_ratio: 1
     prefetch_mode: ~
 
@@ -56,17 +44,18 @@ datasets:
 
 # network structures
 network_g:
-  type: Restormer
-  inp_channels: 3
-  out_channels: 3
-  dim: 48
-  num_blocks: [4,6,6,8]
-  num_refinement_blocks: 4
-  heads: [1,2,4,8]
-  ffn_expansion_factor: 2.66
-  bias: False
-  LayerNorm_type: BiasFree
-  dual_pixel_task: False
+  type: SwinIR
+  upscale: 1
+  in_chans: 3
+  img_size: 128
+  window_size: 8
+  img_range: 1.0
+  depths: [6, 6, 6, 6, 6, 6]
+  embed_dim: 180
+  num_heads: [6, 6, 6, 6, 6, 6]
+  mlp_ratio: 2
+  upsampler: ~
+  resi_connection: '1conv'
 
 
 # path
@@ -107,6 +96,7 @@ val:
   val_freq: !!float 5e3
   save_img: false
   rgb2bgr: true
+  in_ch: 3  ## RGB image
   use_image: true
   max_minibatch: 8
   padding_factor: 8
@@ -120,7 +110,7 @@ val:
 # logging settings
 logger:
   print_freq: 250
-  save_checkpoint_freq: !!float 5e3
+  save_checkpoint_freq: !!float 1e4
   use_tb_logger: true
   wandb:
     project: ~
