--- a/options/train/Uformer/Deraining_Uformer.yml
+++ b/options/train/Uformer/Deraining_Uformer.yml
@@ -1,5 +1,5 @@
 # general settings
-name: 028_Restormer_Benchmark_Gaussian_Denoising_Cosine_GT256B8_600k
+name: 029_Uformer_Benchmark_Derain_Cosine_GT256B8_600k
 model_type: ImageRestorationModel
 scale: 1
 num_gpu: 4  # set num_gpu: 0 for cpu mode
@@ -9,33 +9,31 @@ manual_seed: 100
 datasets:
   train:
     name: TrainSet
-    type: GaussianNoiseImageDataset
-    sigma_type: constant
-    sigma_range: 50
-    in_ch: 3    ## RGB image
-    dataroot_gt:  datasets/Denoising/train/DFWB.lmdb
-    dataroot_lq: none
+    type: PairedImageDataset
+    dataroot_gt: /mnt/petrelfs/puyuandong/Low_level_vision/BasicIR/datasets/Deraining/train/Rain13K/target
+    dataroot_lq: /mnt/petrelfs/puyuandong/Low_level_vision/BasicIR/datasets/Deraining/train/Rain13K/input
+    geometric_augs: false
 
     filename_tmpl: '{}'
     io_backend:
-      type: lmdb
+      type: disk
 
-    # data loader
     use_flip: true
     use_rot: true
+
+    # data loader
     use_shuffle: true
     num_worker_per_gpu: 8
     batch_size_per_gpu: 2
 
     ### -------------Progressive training--------------------------
     # mini_batch_sizes: [8,5,4,2,1,1]             # Batch size per gpu   
-    # iters: [92000,64000,48000,36000,36000,324000]
+    # iters: [92000,64000,48000,36000,36000,24000]
     # gt_size: 384   # Max patch size for progressive training
     # gt_sizes: [128,160,192,256,320,384]  # Patch sizes for progressive training.
     ### ------------------------------------------------------------
 
-    ### ------- Training on single fixed-patch size 128x128---------
-    # mini_batch_sizes: [8]   
+    ### ------- Training on single fixed-patch size 256x256---------  
     iters: [600000]
     gt_size: 256
     gt_sizes: [256]
@@ -46,27 +44,31 @@ datasets:
 
   val:
     name: ValSet
-    type: GaussianNoiseImageDataset
-    sigma_test: 50
-    in_ch: 3  ## RGB image
-    dataroot_gt: datasets/Denoising/test/CBSD68
-    dataroot_lq: none
+    type: PairedImageDataset
+    dataroot_gt: /mnt/petrelfs/puyuandong/Low_level_vision/BasicIR/datasets/Deraining/test/Rain100H/target
+    dataroot_lq: /mnt/petrelfs/puyuandong/Low_level_vision/BasicIR/datasets/Deraining/test/Rain100H/input
     io_backend:
       type: disk
 
 # network structures
 network_g:
-  type: Restormer
-  inp_channels: 3
-  out_channels: 3
-  dim: 48
-  num_blocks: [4,6,6,8]
-  num_refinement_blocks: 4
-  heads: [1,2,4,8]
-  ffn_expansion_factor: 2.66
-  bias: False
-  LayerNorm_type: BiasFree
-  dual_pixel_task: False
+  type: Uformer
+  img_size: 256
+  in_chans: 3
+  dd_in: 3
+  embed_dim: 32 #feature dimension C, 32 for Uformer_B
+  depths: [1, 2, 8, 8, 2, 8, 8, 2, 1]
+  num_heads: [1, 2, 4, 8, 16, 16, 8, 4, 2]
+  win_size: 8
+  mlp_ratio: 4.
+  qkv_bias: True
+  qk_scale: ~
+  drop_rate: 0.
+  attn_drop_rate: 0.
+  drop_path_rate: 0.1
+  token_projection: linear
+  token_mlp: leff
+  modulator: True
 
 
 # path
@@ -74,6 +76,7 @@ path:
   pretrain_network_g: ~
   strict_load_g: true
   resume_state: ~
+
 # training settings
 train:
   total_iter: 600000
@@ -103,24 +106,23 @@ train:
 
 # validation settings
 val:
-  window_size: 8
   val_freq: !!float 5e3
   save_img: false
   rgb2bgr: true
   use_image: true
   max_minibatch: 8
-  padding_factor: 8
-  is_square: false
+  padding_factor: 128
+  is_square: true
   metrics:
     psnr: # metric name, can be arbitrary
       type: calculate_psnr
       crop_border: 0
-      test_y_channel: False
+      test_y_channel: true
 
 # logging settings
 logger:
   print_freq: 250
-  save_checkpoint_freq: !!float 5e3
+  save_checkpoint_freq: !!float 1e4
   use_tb_logger: true
   wandb:
     project: ~
