--- a/options/train/Restormer/RealDenoising_Restormer.yml
+++ b/options/train/Restormer/RealDenoising_Restormer.yml
@@ -17,26 +17,13 @@ datasets:
     io_backend:
       type: lmdb
 
+    # data loader
     use_flip: true
     use_rot: true
-
-    # data loader
     use_shuffle: true
     num_worker_per_gpu: 8
     batch_size_per_gpu: 2
-
-    ### -------------Progressive training--------------------------
-    # mini_batch_sizes: [8,5,4,2,1,1]             # Batch size per gpu   
-    # iters: [92000,64000,48000,36000,36000,24000]
-    # gt_size: 384   # Max patch size for progressive training
-    # gt_sizes: [128,160,192,256,320,384]  # Patch sizes for progressive training.
-    ### ------------------------------------------------------------
-
-    ### ------- Training on single fixed-patch size 256x256---------  
-    iters: [600000]
     gt_size: 256
-    gt_sizes: [256]
-    ### ------------------------------------------------------------
 
     dataset_enlarge_ratio: 1
     prefetch_mode: ~
@@ -76,10 +63,6 @@ train:
   total_iter: 600000
   warmup_iter: 5000 # -1 for no warm up
   use_grad_clip: true
-
-  # Split 300k iterations into two cycles. 
-  # 1st cycle: fixed 3e-4 LR for 92k iters. 
-  # 2nd cycle: cosine annealing (3e-4 to 1e-6) for 208k iters.
   scheduler:
     type: CosineAnnealingRestartLR
     periods: [600000]       
@@ -106,7 +89,7 @@ val:
   rgb2bgr: true
   use_image: true
   max_minibatch: 8
-
+  padding_factor: 8
   metrics:
     psnr: # metric name, can be arbitrary
       type: calculate_psnr
