--- a/options/train/SwinIR/train_SwinIR_derain.yml
+++ b/options/train/SwinIR/train_SwinIR_derain.yml
@@ -1,5 +1,5 @@
 # general settings
-name: 016_Restormer_Benchmark_Derain_Cosine_GT256B8_600k
+name: 035_SwinIR_Benchmark_Deraining_Cosine_GT256B8_600k
 model_type: ImageRestorationModel
 scale: 1
 num_gpu: 4  # set num_gpu: 0 for cpu mode
@@ -17,13 +17,18 @@ datasets:
     io_backend:
       type: disk
 
-    # data loader
     use_flip: true
     use_rot: true
+
+    # data loader
     use_shuffle: true
     num_worker_per_gpu: 8
     batch_size_per_gpu: 2
-    gt_size: 256
+
+    ### ------- Training on single fixed-patch size 128*128---------  
+    gt_size: 128
+    ### ------------------------------------------------------------
+
     dataset_enlarge_ratio: 1
     prefetch_mode: ~
 
@@ -37,17 +42,18 @@ datasets:
 
 # network structures
 network_g:
-  type: Restormer
-  inp_channels: 3
-  out_channels: 3
-  dim: 48
-  num_blocks: [4,6,6,8]
-  num_refinement_blocks: 4
-  heads: [1,2,4,8]
-  ffn_expansion_factor: 2.66
-  bias: False
-  LayerNorm_type: WithBias
-  dual_pixel_task: False
+  type: SwinIR
+  upscale: 1
+  in_chans: 3
+  img_size: 128
+  window_size: 8
+  img_range: 1.0
+  depths: [6, 6, 6, 6, 6, 6]
+  embed_dim: 180
+  num_heads: [6, 6, 6, 6, 6, 6]
+  mlp_ratio: 2
+  upsampler: ~
+  resi_connection: '1conv'
 
 
 # path
