--- a/options/test/Restormer/test_Restormer_gaussian_denoise_50.yml
+++ b/options/test/Restormer/test_Restormer_gaussian_denoise_50.yml
@@ -53,16 +53,16 @@ datasets:
     io_backend:
       # type: lmdb
       type: disk
-  test_5:
-    name: Urban100
-    type: GaussianNoiseImageDataset
-    dataroot_gt: ./datasets/Denoising/test/Urban100
-    dataroot_lq: none
-    sigma_test: 50
-    in_ch: 3  ## RGB image
-    io_backend:
-      # type: lmdb
-      type: disk
+  # test_5:
+  #   name: Urban100
+  #   type: GaussianNoiseImageDataset
+  #   dataroot_gt: ./datasets/Denoising/test/Urban100
+  #   dataroot_lq: none
+  #   sigma_test: 50
+  #   in_ch: 3  ## RGB image
+  #   io_backend:
+  #     # type: lmdb
+  #     type: disk
 network_g:
   type: Restormer
   inp_channels: 3
