--- a/options/test/Restormer/test_Restormer_SR_x4.yml
+++ b/options/test/Restormer/test_Restormer_SR_x4.yml
@@ -5,51 +5,51 @@
 # Copyright 2018-2020 BasicSR Authors
 # ------------------------------------------------------------------------
 # general settings
-name: 016_Restormer_derain
+name: Restormer_SuperResolution_x4
 model_type: ImageRestorationModel
-scale: 1
+scale: 4
 num_gpu: 3 # set num_gpu: 0 for cpu mode
 manual_seed: 10
 
 # dataset and data loader settings
 datasets:
-  test1:
-    name: Test100
+  test_1:
+    name: Set5
     type: PairedImageDataset
-    dataroot_gt: ./datasets/Deraining/test/Test100/target
-    dataroot_lq: ./datasets/Deraining/test/Test100/input
+    dataroot_gt: /mnt/petrelfs/puyuandong/Low_level_vision/BasicIR/datasets/ClassicalSR/Set5/GTmod4
+    dataroot_lq: /mnt/petrelfs/puyuandong/Low_level_vision/BasicIR/datasets/ClassicalSR/Set5/LRbicx4
     io_backend:
       # type: lmdb
       type: disk
-  test2:
-    name: Rain100H
+  test_2:
+    name: Set14
     type: PairedImageDataset
-    dataroot_gt: ./datasets/Deraining/test/Rain100H/target
-    dataroot_lq: ./datasets/Deraining/test/Rain100H/input
+    dataroot_gt: /mnt/petrelfs/puyuandong/Low_level_vision/BasicIR/datasets/ClassicalSR/Set14/GTmod4
+    dataroot_lq: /mnt/petrelfs/puyuandong/Low_level_vision/BasicIR/datasets/ClassicalSR/Set14/LRbicx4
     io_backend:
       # type: lmdb
       type: disk
-  test3:
-    name: Rain100L
+  test_3:
+    name: BSDS100
     type: PairedImageDataset
-    dataroot_gt: ./datasets/Deraining/test/Rain100L/target
-    dataroot_lq: ./datasets/Deraining/test/Rain100L/input
+    dataroot_gt: /mnt/petrelfs/puyuandong/Low_level_vision/BasicIR/datasets/ClassicalSR/BSDS100/GTmod4
+    dataroot_lq: /mnt/petrelfs/puyuandong/Low_level_vision/BasicIR/datasets/ClassicalSR/BSDS100/LRbicx4
     io_backend:
       # type: lmdb
       type: disk
-  test4:
-    name: Test2800
+  test_4:
+    name: Urban100
     type: PairedImageDataset
-    dataroot_gt: ./datasets/Deraining/test/Test2800/target
-    dataroot_lq: ./datasets/Deraining/test/Test2800/input
+    dataroot_gt: /mnt/petrelfs/puyuandong/Low_level_vision/BasicIR/datasets/ClassicalSR/Urban100/GTmod4
+    dataroot_lq: /mnt/petrelfs/puyuandong/Low_level_vision/BasicIR/datasets/ClassicalSR/Urban100/LRbicx4
     io_backend:
       # type: lmdb
       type: disk
-  test5:
-    name: Test1200
+  test_5:
+    name: Manga109
     type: PairedImageDataset
-    dataroot_gt: ./datasets/Deraining/test/Test1200/target
-    dataroot_lq: ./datasets/Deraining/test/Test1200/input
+    dataroot_gt: /mnt/petrelfs/puyuandong/Low_level_vision/BasicIR/datasets/ClassicalSR/Manga109/GTmod4
+    dataroot_lq: /mnt/petrelfs/puyuandong/Low_level_vision/BasicIR/datasets/ClassicalSR/Manga109/LRbicx4
     io_backend:
       # type: lmdb
       type: disk
@@ -66,10 +66,12 @@ network_g:
   bias: False
   LayerNorm_type: WithBias
   dual_pixel_task: False
+  scale : 4
 
 # path
 path:
-  pretrain_network_g:  experiments/016_Restormer_Benchmark_Derain_Cosine_GT256B8_600k/models/net_g_latest.pth
+  pretrain_network_g:  experiments/040_Restormer_Benchmark_Image_SuperResolution_Cosine_GT256B8_600k/models/net_g_latest.pth
+  strict_load_g: False
   resume_state: ~
 
 # validation settings
@@ -77,16 +79,14 @@ val:
   save_img: true
   grids: false
   padding_factor: 8
-  use_image : true
-  rgb2bgr: true
   metrics:
     psnr: # metric name, can be arbitrary
       type: calculate_psnr
-      crop_border: 0
+      crop_border: 4
       test_y_channel: true
     ssim:
       type: calculate_ssim
-      crop_border: 0
+      crop_border: 4
       test_y_channel: true
 
 # dist training settings
