--- a/options/test/SwinIR/test_SwinIR_derain.yml
+++ b/options/test/SwinIR/test_SwinIR_derain.yml
@@ -8,7 +8,7 @@
 name: SwinIR_Derain
 model_type: ImageRestorationModel
 scale: 1
-num_gpu: 2 # set num_gpu: 0 for cpu mode
+num_gpu: 3 # set num_gpu: 0 for cpu mode
 manual_seed: 10
 
 # dataset and data loader settings
@@ -21,38 +21,38 @@ datasets:
     io_backend:
       # type: lmdb
       type: disk
-  # test_2:
-  #   name: Rain100H
-  #   type: PairedImageDataset
-  #   dataroot_gt: ./datasets/Deraining/test/Rain100H/target
-  #   dataroot_lq: ./datasets/Deraining/test/Rain100H/input
-  #   io_backend:
-  #     # type: lmdb
-  #     type: disk
-  # test_3:
-  #   name: Rain100L
-  #   type: PairedImageDataset
-  #   dataroot_gt: ./datasets/Deraining/test/Rain100L/target
-  #   dataroot_lq: ./datasets/Deraining/test/Rain100L/input
-  #   io_backend:
-  #     # type: lmdb
-  #     type: disk
-  # test_4:
-  #   name: Test2800
-  #   type: PairedImageDataset
-  #   dataroot_gt: ./datasets/Deraining/test/Test2800/target
-  #   dataroot_lq: ./datasets/Deraining/test/Test2800/input
-  #   io_backend:
-  #     # type: lmdb
-  #     type: disk
-  # test_5:
-  #   name: Test1200
-  #   type: PairedImageDataset
-  #   dataroot_gt: ./datasets/Deraining/test/Test1200/target
-  #   dataroot_lq: ./datasets/Deraining/test/Test1200/input
-  #   io_backend:
-  #     # type: lmdb
-  #     type: disk
+  test_2:
+    name: Rain100H
+    type: PairedImageDataset
+    dataroot_gt: ./datasets/Deraining/test/Rain100H/target
+    dataroot_lq: ./datasets/Deraining/test/Rain100H/input
+    io_backend:
+      # type: lmdb
+      type: disk
+  test_3:
+    name: Rain100L
+    type: PairedImageDataset
+    dataroot_gt: ./datasets/Deraining/test/Rain100L/target
+    dataroot_lq: ./datasets/Deraining/test/Rain100L/input
+    io_backend:
+      # type: lmdb
+      type: disk
+  test_4:
+    name: Test2800
+    type: PairedImageDataset
+    dataroot_gt: ./datasets/Deraining/test/Test2800/target
+    dataroot_lq: ./datasets/Deraining/test/Test2800/input
+    io_backend:
+      # type: lmdb
+      type: disk
+  test_5:
+    name: Test1200
+    type: PairedImageDataset
+    dataroot_gt: ./datasets/Deraining/test/Test1200/target
+    dataroot_lq: ./datasets/Deraining/test/Test1200/input
+    io_backend:
+      # type: lmdb
+      type: disk
 
 # network structures
 network_g:
@@ -71,7 +71,7 @@ network_g:
 
 # path
 path:
-  pretrain_network_g: /mnt/petrelfs/puyuandong/Low_level_vision/BasicIR/experiments/pretrained_models/SwinIR/005_colorDN_DFWB_s128w8_SwinIR-M_noise50.pth
+  pretrain_network_g: /mnt/petrelfs/puyuandong/Low_level_vision/BasicIR/experiments/035_SwinIR_Benchmark_Deraining_Cosine_GT256B8_600k/models/net_g_latest.pth
   strict_load_g: false
   resume_state: ~
 
