--- a/options/test/Uformer/test_Uformer_SR_x4.yml
+++ b/options/test/Uformer/test_Uformer_SR_x4.yml
@@ -5,7 +5,7 @@
 # Copyright 2018-2020 BasicSR Authors
 # ------------------------------------------------------------------------
 # general settings
-name: SwinIR_SuperResolution_x4
+name: Uformer_SR_x4
 model_type: ImageRestorationModel
 scale: 4
 num_gpu: 2 # set num_gpu: 0 for cpu mode
@@ -55,32 +55,36 @@ datasets:
       type: disk
 # network structures
 network_g:
-  type: SwinIR
-  upscale: 4
+  type: Uformer
+  img_size: 256
   in_chans: 3
-  img_size: 64
-  window_size: 8
-  img_range: 1.
-  depths: [6, 6, 6, 6, 6, 6]
-  embed_dim: 180
-  num_heads: [6, 6, 6, 6, 6, 6]
-  mlp_ratio: 2
-  upsampler: 'pixelshuffle'
-  resi_connection: '1conv'
-
+  dd_in: 3
+  embed_dim: 32 #feature dimension C, 32 for Uformer_B
+  depths: [1, 2, 8, 8, 2, 8, 8, 2, 1]
+  num_heads: [1, 2, 4, 8, 16, 16, 8, 4, 2]
+  win_size: 8
+  mlp_ratio: 4.
+  qkv_bias: True
+  qk_scale: ~
+  drop_rate: 0.
+  attn_drop_rate: 0.
+  drop_path_rate: 0.1
+  token_projection: linear
+  token_mlp: leff
+  modulator: True
+  scale: 4
 # path
 path:
-  pretrain_network_g: experiments/pretrained_models/SwinIR/001_classicalSR_DF2K_s64w8_SwinIR-M_x4.pth
-  strict_load_g: false
+  pretrain_network_g:  /mnt/petrelfs/puyuandong/Low_level_vision/BasicIR/experiments/029_Uformer_Benchmark_Derain_Cosine_GT256B8_600k/models/net_g_latest.pth
+  strict_load_g: true
   resume_state: ~
+  # param_key: state_dict
 
 # validation settings
 val:
-  save_img: true
+  save_img: false
   grids: false
-  use_image : true
-  padding_factor: 8
-  is_square: false
+  padding_factor: 128 
   metrics:
     psnr: # metric name, can be arbitrary
       type: calculate_psnr
@@ -94,4 +98,4 @@ val:
 # dist training settings
 dist_params:
   backend: nccl
-  port: 29501
+  port: 29500
