--- a/options/train/Restormer/ImageSR_x4_Restormer.yml
+++ b/options/train/Restormer/ImageSR_x4_Restormer.yml
@@ -1,69 +1,70 @@
 # general settings
-name: 036_SwinIR_Benchmark_Moition_Deblurring_Cosine_GT256B8_600k
+name: 048_Restormer_pre_upsample_Benchmark_Image_SuperResolution_Cosine_GT256B8_600k
 model_type: ImageRestorationModel
-scale: 1
+scale: 4
 num_gpu: 4  # set num_gpu: 0 for cpu mode
 manual_seed: 100
 
 # dataset and data loader settings
 datasets:
   train:
-    name: TrainSet
+    name: DF2K
     type: PairedImageDataset
-    dataroot_gt: datasets/Motion_Deblurring/train/GoPro/sharp_crops.lmdb
-    dataroot_lq: datasets/Motion_Deblurring/train/GoPro/blur_crops.lmdb
-
+    # in_ch: 3    ## RGB image
+    dataroot_gt: /mnt/petrelfs/puyuandong/Low_level_vision/BasicIR/datasets/ClassicalSR/DF2K_train_HR_sub.lmdb
+    dataroot_lq: /mnt/petrelfs/puyuandong/Low_level_vision/BasicIR/datasets/ClassicalSR/DF2K_train_LR_bicubic_X4_sub.lmdb
     filename_tmpl: '{}'
     io_backend:
       type: lmdb
 
+    # data loader
     use_flip: true
     use_rot: true
-
-    # data loader
     use_shuffle: true
     num_worker_per_gpu: 8
     batch_size_per_gpu: 2
-    gt_size: 128
+    gt_size: 256
     dataset_enlarge_ratio: 1
     prefetch_mode: ~
 
   val:
-    name: GoPro
+    name: ValSet
     type: PairedImageDataset
-    dataroot_gt: /mnt/petrelfs/puyuandong/Low_level_vision/BasicIR/datasets/Motion_Deblurring/val/GoPro/target_crops
-    dataroot_lq: /mnt/petrelfs/puyuandong/Low_level_vision/BasicIR/datasets/Motion_Deblurring/val/GoPro/input_crops
+    # in_ch: 3  ## RGB image
+    dataroot_gt: /mnt/petrelfs/puyuandong/Low_level_vision/BasicIR/datasets/ClassicalSR/Set5/GTmod4
+    dataroot_lq: /mnt/petrelfs/puyuandong/Low_level_vision/BasicIR/datasets/ClassicalSR/Set5/LRbicx4
     io_backend:
       type: disk
 
 # network structures
 network_g:
-  type: SwinIR
-  upscale: 1
-  in_chans: 3
-  img_size: 128
-  window_size: 8
-  img_range: 1.0
-  depths: [6, 6, 6, 6, 6, 6]
-  embed_dim: 180
-  num_heads: [6, 6, 6, 6, 6, 6]
-  mlp_ratio: 2
-  upsampler: ~
-  resi_connection: '1conv'
-
+  type: Restormer
+  inp_channels: 3
+  out_channels: 3
+  dim: 48
+  num_blocks: [4,6,6,8]
+  num_refinement_blocks: 4
+  heads: [1,2,4,8]
+  ffn_expansion_factor: 2.66
+  bias: False
+  LayerNorm_type: WithBias
+  dual_pixel_task: False
+  scale : 4
 
 # path
 path:
   pretrain_network_g: ~
   strict_load_g: true
   resume_state: ~
-
 # training settings
 train:
   total_iter: 600000
   warmup_iter: 5000 # -1 for no warm up
   use_grad_clip: true
 
+  # Split 300k iterations into two cycles. 
+  # 1st cycle: fixed 3e-4 LR for 92k iters. 
+  # 2nd cycle: cosine annealing (3e-4 to 1e-6) for 208k iters.
   scheduler:
     type: CosineAnnealingRestartLR
     periods: [600000]       
@@ -84,23 +85,24 @@ train:
 
 # validation settings
 val:
-  window_size: 8
+  # window_size: 8
   val_freq: !!float 5e3
   save_img: false
   rgb2bgr: true
   use_image: true
-  max_minibatch: 8
+  max_minibatch: 1
   padding_factor: 8
+  is_square: false
   metrics:
     psnr: # metric name, can be arbitrary
       type: calculate_psnr
-      crop_border: 0
-      test_y_channel: false
+      crop_border: 4
+      test_y_channel: true
 
 # logging settings
 logger:
   print_freq: 250
-  save_checkpoint_freq: !!float 5e3
+  save_checkpoint_freq: !!float 1e4
   use_tb_logger: true
   wandb:
     project: ~
