--- a/options/train/SwinIR/train_SwinIR_real_denoise.yml
+++ b/options/train/SwinIR/train_SwinIR_real_denoise.yml
@@ -1,5 +1,5 @@
 # general settings
-name: 036_SwinIR_Benchmark_Moition_Deblurring_Cosine_GT256B8_600k
+name: 039_SwinIR_Benchmark_Real_Denoising_Cosine_GT256B8_600k
 model_type: ImageRestorationModel
 scale: 1
 num_gpu: 4  # set num_gpu: 0 for cpu mode
@@ -10,30 +10,31 @@ datasets:
   train:
     name: TrainSet
     type: PairedImageDataset
-    dataroot_gt: datasets/Motion_Deblurring/train/GoPro/sharp_crops.lmdb
-    dataroot_lq: datasets/Motion_Deblurring/train/GoPro/blur_crops.lmdb
+    dataroot_gt: datasets/Denoising/train/SIDD/gt_crops.lmdb
+    dataroot_lq: datasets/Denoising/train/SIDD/input_crops.lmdb
 
     filename_tmpl: '{}'
     io_backend:
       type: lmdb
 
+    # data loader
     use_flip: true
     use_rot: true
-
-    # data loader
     use_shuffle: true
     num_worker_per_gpu: 8
     batch_size_per_gpu: 2
     gt_size: 128
+
     dataset_enlarge_ratio: 1
     prefetch_mode: ~
 
   val:
-    name: GoPro
+    name: SIDD
     type: PairedImageDataset
-    dataroot_gt: /mnt/petrelfs/puyuandong/Low_level_vision/BasicIR/datasets/Motion_Deblurring/val/GoPro/target_crops
-    dataroot_lq: /mnt/petrelfs/puyuandong/Low_level_vision/BasicIR/datasets/Motion_Deblurring/val/GoPro/input_crops
+    dataroot_gt: ./datasets/Denoising/val/SIDD/groundtruth
+    dataroot_lq: ./datasets/Denoising/val/SIDD/input
     io_backend:
+      # type: lmdb
       type: disk
 
 # network structures
@@ -100,7 +101,7 @@ val:
 # logging settings
 logger:
   print_freq: 250
-  save_checkpoint_freq: !!float 5e3
+  save_checkpoint_freq: !!float 1e4
   use_tb_logger: true
   wandb:
     project: ~
