--- a/options/train/Uformer/GaussianColorDenoising_Uformer_Sigma50.yml
+++ b/options/train/Uformer/GaussianColorDenoising_Uformer_Sigma50.yml
@@ -1,5 +1,5 @@
 # general settings
-name: 036_SwinIR_Benchmark_Moition_Deblurring_Cosine_GT256B8_600k
+name: 041_Uformer_Benchmark_Gaussian_Denoising_Cosine_GT256B8_600k
 model_type: ImageRestorationModel
 scale: 1
 num_gpu: 4  # set num_gpu: 0 for cpu mode
@@ -9,47 +9,56 @@ manual_seed: 100
 datasets:
   train:
     name: TrainSet
-    type: PairedImageDataset
-    dataroot_gt: datasets/Motion_Deblurring/train/GoPro/sharp_crops.lmdb
-    dataroot_lq: datasets/Motion_Deblurring/train/GoPro/blur_crops.lmdb
+    type: GaussianNoiseImageDataset
+    sigma_type: constant
+    sigma_range: 50
+    in_ch: 3    ## RGB image
+    dataroot_gt:  datasets/Denoising/train/DFWB.lmdb
+    dataroot_lq: none
 
     filename_tmpl: '{}'
     io_backend:
       type: lmdb
 
+    # data loader
     use_flip: true
     use_rot: true
-
-    # data loader
     use_shuffle: true
     num_worker_per_gpu: 8
     batch_size_per_gpu: 2
-    gt_size: 128
+    gt_size: 256
     dataset_enlarge_ratio: 1
     prefetch_mode: ~
 
   val:
-    name: GoPro
-    type: PairedImageDataset
-    dataroot_gt: /mnt/petrelfs/puyuandong/Low_level_vision/BasicIR/datasets/Motion_Deblurring/val/GoPro/target_crops
-    dataroot_lq: /mnt/petrelfs/puyuandong/Low_level_vision/BasicIR/datasets/Motion_Deblurring/val/GoPro/input_crops
+    name: ValSet
+    type: GaussianNoiseImageDataset
+    sigma_test: 50
+    in_ch: 3  ## RGB image
+    dataroot_gt: datasets/Denoising/test/CBSD68
+    dataroot_lq: none
     io_backend:
       type: disk
 
 # network structures
 network_g:
-  type: SwinIR
-  upscale: 1
+  type: Uformer
+  img_size: 256
   in_chans: 3
-  img_size: 128
-  window_size: 8
-  img_range: 1.0
-  depths: [6, 6, 6, 6, 6, 6]
-  embed_dim: 180
-  num_heads: [6, 6, 6, 6, 6, 6]
-  mlp_ratio: 2
-  upsampler: ~
-  resi_connection: '1conv'
+  dd_in: 3
+  embed_dim: 32 #feature dimension C, 32 for Uformer_B
+  depths: [1, 2, 8, 8, 2, 8, 8, 2, 1]
+  num_heads: [1, 2, 4, 8, 16, 16, 8, 4, 2]
+  win_size: 8
+  mlp_ratio: 4.
+  qkv_bias: True
+  qk_scale: ~
+  drop_rate: 0.
+  attn_drop_rate: 0.
+  drop_path_rate: 0.1
+  token_projection: linear
+  token_mlp: leff
+  modulator: True
 
 
 # path
@@ -57,7 +66,6 @@ path:
   pretrain_network_g: ~
   strict_load_g: true
   resume_state: ~
-
 # training settings
 train:
   total_iter: 600000
@@ -95,7 +103,7 @@ val:
     psnr: # metric name, can be arbitrary
       type: calculate_psnr
       crop_border: 0
-      test_y_channel: false
+      test_y_channel: False
 
 # logging settings
 logger:
